// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba con el <GifGrid /> Debe de mostrar items cuando se cargan imagenes al useFetchGifs  1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One Punch
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;

exports[`Prueba con el <GifGrid /> debe de mostrar  <GifGrid /> correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    One Punch
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading ..
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
